@@ -1,6 +1,6 @@
 package zxf.logging.legacy.service;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -13,12 +13,12 @@ public class JULLoggingService {
         System.out.println("1.1 Check config class setting from system property java.util.logging.config.class, " + configClassFromSysProp);
         String configFileFromSysProp = System.getProperty("java.util.logging.config.file");
         System.out.println("1.2 Check config file setting from system property java.util.logging.config.file, as local path, " + configFileFromSysProp);
-        String configFileDefault = Paths.get(System.getProperty("java.home"), "conf", "logging.properties").toString();
+        String configFileDefault = Path.of(System.getProperty("java.home"), "conf", "logging.properties").toString();
         System.out.println("1.3 Check default config file {java.home}/conf/logging.properties, as local path, " + configFileDefault);
     }
 
     public void testLogging(Boolean debug) {
-        System.out.println(String.format("Testing JUL logging, debug=%s.............", debug));
+        System.out.println("Testing JUL logging, debug=%s.............".formatted(debug));
         Logger logger = Logger.getLogger(JULLoggingService.class.getName());
         if (logger.isLoggable(Level.FINEST)) {
             logger.log(Level.FINEST, "JUL FINEST message by " + logger.getClass().getName(), new RuntimeException("JUL finest"));
